# Hik_VideoCapAndPush

./: CMakeLists.txt  README.md
head/: LocationReporter.h  ObjectTrackingConfig.h  PushStream.cuh  SharedData.h  TaskDisplay.h  TaskLocating.h  TaskLocationReporter.h  TaskObjectTracking.h  TaskRTSPStream.h  TaskThermalCapture copy.h  TaskThermalCapture.h  TaskVideoCapture.h  ThreadManager.h
rtspserver/: rtsp-simple-server.yml
src/: ControlServer.cpp  ControlServer.h  LocationReporter.cpp  PushStream.cu  TaskDisplay.cpp  TaskLocating.cpp  TaskLocationReporter.cpp  TaskObjectTracking.cpp  TaskRTSPStream.cpp  TaskThermalCapture.cpp  TaskVideoCapture.cpp  ThreadManager.cpp  main.cpp
